add swallow controll for cclayer && add servral api for ccs ui.

--- a/tools/tojs/cocos2dx_studio.ini
+++ b/tools/tojs/cocos2dx_studio.ini
@@ -26,7 +26,7 @@ headers = %(cocosdir)s/extensions/cocos-ext.h
 
 # what classes to produce code for. You can use regular expressions here. When testing the regular
 # expression, it will be enclosed in "^$", like this: "^CCMenu*$".
-classes =  CCArmature CCArmatureAnimation ColliderBody CCSkin CCBone CCArmatureDataManager CCBaseData UIHelper Layout Widget TouchGroup Button CheckBox ImageView Label LabelAtlas LabelBMFont LoadingBar Slider TextField ScrollView PageView ListView LayoutParameter LinearLayoutParameter RelativeLayoutParameter CCInputDelegate CCComController CCComAudio CCComAttribute CCComRender ActionManager SceneReader GUIReader CCBatchNode ActionObject CCBaseData CCTween CCColliderFilter CCDisplayManager
+classes =  CCArmature CCArmatureAnimation ColliderBody CCSkin CCBone CCArmatureDataManager CCBaseData UIHelper Layout Widget TouchGroup Button CheckBox ImageView Label LabelAtlas LabelBMFont LoadingBar Slider TextField ScrollView PageView ListView LayoutParameter LinearLayoutParameter RelativeLayoutParameter CCInputDelegate CCComController CCComAudio CCComAttribute CCComRender ActionManager SceneReader GUIReader CCBatchNode ActionObject CCBaseData CCTween CCColliderFilter CCDisplayManager RichText RichElement RichElementText RichElementImage
 
 # what should we skip? in the format ClassName::[function function]
 # ClassName is a regular expression, but will be used like this: "^ClassName$" functions are also
